challenge_patch